--- a/P3-Movie/clean.ipynb
+++ b/P3-Movie/clean.ipynb
@@ -37,7 +37,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "      <td>Fantasy</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0                1                2         3     4\n",
+       "0     Action        Adventure  Science Fiction  Thriller  None\n",
+       "1     Action        Adventure  Science Fiction  Thriller  None\n",
+       "2  Adventure  Science Fiction         Thriller      None  None\n",
+       "3     Action        Adventure  Science Fiction   Fantasy  None\n",
+       "4     Action            Crime         Thriller      None  None"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_genres = movies['genres'].str.split('|', expand=True)\n",
+    "split_genres.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -117,20 +203,19 @@
        "4     Action            Crime         Thriller      None  None  168259"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "split_genres = movies['genres'].str.split('|', expand=True)\n",
     "split_genres['id'] = movies['id']\n",
     "split_genres.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +277,7 @@
        "4  168259          2015     Action"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,6 +293,15 @@
     "melted.to_csv('id_year_genre.csv', index=False)\n",
     "melted.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
